--- a/OOS/src/app/admin/categories/category-detail/category-detail.component.html
+++ b/OOS/src/app/admin/categories/category-detail/category-detail.component.html
@@ -1,19 +1,19 @@
 <div class="col-md-6">
   <div class="billing-details">
     <div class="section-title">
-      <h3 class="title">{{category.name}}'s Detail</h3>
+      <h3 class="title">{{category.Name}}'s Detail</h3>
     </div>
     <div class="form-group">
-      <p><b>Id: </b>{{category.id}}</p>
+      <p><b>Id: </b>{{category.Id}}</p>
     </div>
     <div class="form-group">
-        <p><b>Name: </b>{{category.name}}</p>
+        <p><b>Name: </b>{{category.Name}}</p>
     </div>
     <div class="form-group">
-        <p><b>Description: </b>{{category.description}}</p>
+        <p><b>Description: </b>{{category.Description}}</p>
     </div>
   </div>
-  <a routerLink="../edit/{{category.id}}" routerLinkActive="active" class="btn primary-btn">
+  <a routerLink="../edit/{{category.Id}}" routerLinkActive="active" class="btn primary-btn">
     Edit
   </a>
   <button class="primary-btn" (click)="deleteCategory(category)">Delete</button>
