--- a/OOS/src/app/shopping/cart/payment/payment.component.html
+++ b/OOS/src/app/shopping/cart/payment/payment.component.html
@@ -8,27 +8,27 @@
       </div>
       <div class="form-group">
         <label>Email: </label>
-        <input class="input" type="text" [(ngModel)]="order.email" placeholder="Name">
+        <input class="input" type="text" [(ngModel)]="order.Email" placeholder="Name">
       </div>
       <div class="form-group">
         <label>Name: </label>
-        <input class="input" type="text" [(ngModel)]="order.address[1].name" placeholder="Name">
+        <input class="input" type="text" [(ngModel)]="order.Address[1].Name" placeholder="Name">
       </div>
       <div class="form-group">
         <label>Phone: </label>
-        <input class="input" type="text" [(ngModel)]="order.address[1].phone" placeholder="Phone">
+        <input class="input" type="text" [(ngModel)]="order.Address[1].Phone" placeholder="Phone">
       </div>
       <div class="form-group">
         <label>Province: </label>
-        <input class="input" type="text" [(ngModel)]="order.address[1].province" placeholder="Province">
+        <input class="input" type="text" [(ngModel)]="order.Address[1].Province" placeholder="Province">
       </div>
       <div class="form-group">
         <label>Disctrict: </label>
-        <input class="input" type="text" [(ngModel)]="order.address[1].district" placeholder="District">
+        <input class="input" type="text" [(ngModel)]="order.Address[1].District" placeholder="District">
       </div>
       <div class="form-group">
         <label>Street: </label>
-        <input class="input" type="text" [(ngModel)]="order.address[1].street" placeholder="Street">
+        <input class="input" type="text" [(ngModel)]="order.Address[1].Street" placeholder="Street">
       </div>
     </div>
     <!-- Billing Address -->
@@ -39,19 +39,19 @@
           <h3 class="title">Shipping Address</h3>
         </div>
         <div class="form-group">
-          <input class="input" type="text" [(ngModel)]="order.address[0].name" placeholder="Name">
+          <input class="input" type="text" [(ngModel)]="order.Address[0].Name" placeholder="Name">
         </div>
         <div class="form-group">
-          <input class="input" type="text" [(ngModel)]="order.address[0].phone" placeholder="Phone">
+          <input class="input" type="text" [(ngModel)]="order.Address[0].Phone" placeholder="Phone">
         </div>
         <div class="form-group">
-          <input class="input" type="email" [(ngModel)]="order.address[0].street" placeholder="Street">
+          <input class="input" type="email" [(ngModel)]="order.Address[0].Street" placeholder="Street">
         </div>
         <div class="form-group">
-          <input class="input" id="end" type="text" [(ngModel)]="order.address[0].district" placeholder="District" (blur)="onBlurMethod($event.target.value)">
+          <input class="input" id="end" type="text" [(ngModel)]="order.Address[0].District" placeholder="District" (blur)="onBlurMethod($event.target.value)">
         </div>
         <div class="form-group">
-          <input class="input" type="text" [(ngModel)]="order.address[0].province" placeholder="Province">
+          <input class="input" type="text" [(ngModel)]="order.Address[0].Province" placeholder="Province">
         </div>
 
         <div class="form-group">          
@@ -100,30 +100,30 @@
               <th class="text-center">Total</th>
             </tr>
           </thead>
-          <tbody *ngFor="let detail of order.orderDetails">
+          <tbody *ngFor="let detail of order.OrderDetails">
             <tr>
               <td class="detail">
-                <h4>{{detail.nameProduct}}</h4>
+                <h4>{{detail.NameProduct}}</h4>
                 <ul>
-                  <li *ngIf="detail.color">
+                  <li *ngIf="detail.Color">
                     <span>Color:
-                      <span class="product-color" [style.background]="detail.color">&nbsp;&nbsp;&nbsp;</span>
+                      <span class="product-color" [style.background]="detail.Color">&nbsp;&nbsp;&nbsp;</span>
                     </span>
                   </li>
                   <li *ngIf="detail.size">
-                    <span>Size: {{detail.size}}</span>
+                    <span>Size: {{detail.Size}}</span>
                   </li>
                 </ul>
               </td>
               <td class="price text-center">
-                <strong>{{detail.price | number}}</strong>
+                <strong>{{detail.Price | number}}</strong>
               </td>
               <td></td>
               <td class="price text-center">
-                <strong>{{detail.quantity | number}}</strong>
+                <strong>{{detail.Quantity | number}}</strong>
               </td>
               <td class="total text-center">
-                <strong>{{detail.totalPrice | number}}</strong>
+                <strong>{{detail.TotalPrice | number}}</strong>
               </td>
             </tr>
           </tbody>
@@ -137,7 +137,7 @@
             <tr>
               <th class="empty" colspan="3"></th>
               <th>TOTAL</th>
-              <th colspan="2" class="total">{{order.total | number}}</th>
+              <th colspan="2" class="total">{{order.Total | number}}</th>
             </tr>
           </tfoot>
         </table>
