--- a/OOS/src/app/shopping/category-details/product-box/product-box.component.html
+++ b/OOS/src/app/shopping/category-details/product-box/product-box.component.html
@@ -3,13 +3,13 @@
   <div class="product product-single">
     <div class="product-thumb">
         <div (click)="routeProduct()">
-      <div *ngIf="productDetail.basicImage==null">
-          <img src="https://colorlib.com/etc/e-shop/img/thumb-product01.jpg" alt="{{productDetail.name}}" height="320" width="270">
+      <div *ngIf="productDetail.BasicImage==null">
+          <img src="https://colorlib.com/etc/e-shop/img/thumb-product01.jpg" alt="{{productDetail.Name}}" height="320" width="270">
       </div>
-      <img src="{{productDetail.basicImage}}" alt="{{productDetail.name}}" height="320" width="270">
+      <img src="{{productDetail.BasicImage}}" alt="{{productDetail.Name}}" height="320" width="270">
     </div>
     <div class="product-body">
-      <h3 style="color:#F8694A" class="product-price">{{productDetail.minPrice | number}} $</h3>
+      <h3 style="color:#F8694A" class="product-price">{{productDetail.MinPrice | number}} {{currencyDefine[currency]}}</h3>
       <div class="product-rating">
         <i class="fa fa-star"></i>
         <i class="fa fa-star"></i>
@@ -18,7 +18,7 @@
         <i class="fa fa-star-o empty"></i>
       </div>
       <h2 class="product-name">
-       <a (click)="routeProduct()">{{productDetail.name}}</a>
+       <a (click)="routeProduct()">{{productDetail.Name}}</a>
       </h2>
       </div>
       <div class="product-btns">
