--- a/OOS/src/app/shopping/home-page/cart/cart.component.html
+++ b/OOS/src/app/shopping/home-page/cart/cart.component.html
@@ -13,17 +13,17 @@
       <div class="shopping-cart-list">
         <div *ngFor="let item of cart" class="product product-widget">
           <div class="product-thumb">
-            <img src="{{item.product.image}}" style="cursor: pointer" (click)="routeProduct(item.product.name,item.product.id)">
+            <img src="{{item.Product.Image}}" style="cursor: pointer" (click)="routeProduct(item.Product.Name,item.Product.Id)">
           </div>
-          <div class="product-body" style="cursor: pointer" (click)="routeProduct(item.product.name,item.product.id)">
-            <h3 class="product-price">{{item.product.price | number}}
-              <span class="qty">x{{item.quantity | number}}</span>
+          <div class="product-body" style="cursor: pointer" (click)="routeProduct(item.Product.Name,item.Product.Id)">
+            <h3 class="product-price">{{item.Product.Price | number}}
+              <span class="qty">x{{item.Quantity | number}}</span>
             </h3>
             <h2 class="product-name">
-              <a style="cursor: pointer" (click)="routeProduct(item.product.name,item.product.id)">{{item.product.name}}</a>
+              <a style="cursor: pointer" (click)="routeProduct(item.Product.Name,item.Product.Id)">{{item.Product.Name}}</a>
             </h2>
           </div>
-          <button class="cancel-btn" (click)="remove(item.product)">
+          <button class="cancel-btn" (click)="remove(item.Product)">
             <i class="fa fa-trash"></i>
           </button>
         </div>
