--- a/OOS/src/app/shopping/list-categories/list-categories.component.html
+++ b/OOS/src/app/shopping/list-categories/list-categories.component.html
@@ -1,7 +1,7 @@
 <ul class="category-list" >
   <li *ngFor="let category of categories; let i = index">
     
-    <a [routerLink]="['../'] + category.id">{{category.name}}</a>
+    <a [routerLink]="['../'] + category.Id">{{category.Name}}</a>
 
   </li>
 </ul>
