--- a/OOS/src/app/shopping/cart/payment/payment.component.html
+++ b/OOS/src/app/shopping/cart/payment/payment.component.html
@@ -131,7 +131,7 @@
             <tr>
               <th class="empty" colspan="3"></th>
               <th>SHIPPING</th>
-              <td colspan="2" id="shipfee">{{shippingFee}}</td>
+              <td colspan="2" id="shipfee">{{shippingFee | number}}</td>
             </tr>
 
             <tr>
