--- a/OOS/src/app/shopping/shopping/shopping.component.html
+++ b/OOS/src/app/shopping/shopping/shopping.component.html
@@ -57,7 +57,7 @@
                 <div class="header-btns-icon">
                   <i class="fa fa-user-o"></i>
                 </div>
-                <strong class="text-uppercase, shortName">{{user.UserName}}
+                <strong class="text-uppercase, shortName">{{user.Email}}
                   <i class="fa fa-caret-down"></i>
                 </strong>
               </div>
