--- a/OOS/src/app/shopping/account/profile-account/profile-account.component.html
+++ b/OOS/src/app/shopping/account/profile-account/profile-account.component.html
@@ -95,7 +95,7 @@
         <div class="section-title">
           <h3 class="title">My Wishlist</h3>
         </div>
-        <app-wishlist-account [userId]="idUser"></app-wishlist-account>
+        <app-wishlist-account [userId]="username"></app-wishlist-account>
       </div>
     </div>
   </div>
