--- a/OOS/src/app/shopping/shopping/shopping.component.html
+++ b/OOS/src/app/shopping/shopping/shopping.component.html
@@ -315,17 +315,17 @@
           <ul class="">
             <li>
               <a>
-                <i class="">Ðịa chỉ :{{socialnetworks.address}}</i>
+                <i class="">Ðịa chỉ :{{socialnetworks.Address}}</i>
               </a>
             </li>
             <li>
               <a>
-                <i class="">Hotline :{{socialnetworks.hostline}}</i>
+                <i class="">Hotline :{{socialnetworks.Hostline}}</i>
               </a>
             </li>
             <li>
               <a>
-                <i class="">Email: {{socialnetworks.email}}</i>
+                <i class="">Email: {{socialnetworks.Email}}</i>
               </a>
             </li>
           </ul>
@@ -333,27 +333,27 @@
           <!-- footer social -->
           <ul class="footer-social">
             <li>
-              <a href="{{socialnetworks.linkFB}}">
+              <a href="{{socialnetworks.LinkFB}}">
                 <i class="fa fa-facebook"></i>
               </a>
             </li>
             <li>
-              <a href="{{socialnetworks.linkTwitter}}">
+              <a href="{{socialnetworks.LinkTwitter}}">
                 <i class="fa fa-twitter"></i>
               </a>
             </li>
             <li>
-              <a href="{{socialnetworks.linkInstagram}}">
+              <a href="{{socialnetworks.LinkInstagram}}">
                 <i class="fa fa-instagram"></i>
               </a>
             </li>
             <li>
-              <a href="{{socialnetworks.linkGooglePlus}}">
+              <a href="{{socialnetworks.LinkGooglePlus}}">
                 <i class="fa fa-google-plus"></i>
               </a>
             </li>
             <li>
-              <a href="{{socialnetworks.linkPinterest}}">
+              <a href="{{socialnetworks.LinkPinterest}}">
                 <i class="fa fa-pinterest"></i>
               </a>
             </li>
