--- a/OOS/src/app/shopping/search/search.component.html
+++ b/OOS/src/app/shopping/search/search.component.html
@@ -63,7 +63,7 @@
         <!-- aside widget -->
         <div class="aside">
           <h3 class="aside-title">Filter by Price</h3>
-          <nouislider class="price-slider" [connect]="true" [min]="0" [max]="3000" [step]="1" [(ngModel)]="range" [tooltips]="[ true, true ]"
+          <nouislider class="price-slider" [connect]="true" [min]="0" [max]="1000000" [step]="1000" [(ngModel)]="range" [tooltips]="[ true, true ]"
             (change)="changePrice()"></nouislider>
         </div>
         <!-- aside widget -->
@@ -211,7 +211,7 @@
             </div>
             <div class="sort-filter">
               <span class="text-uppercase">Sort By:</span>
-              <select class="input" (change)="changeSort()" [(ngModel)]="sort" name="sort">
+              <select class="input" (change)="sortAndFiltePrice()" [(ngModel)]="sort" name="sort">
                 <option value="name">Name</option>
                 <option value="price">Price</option>
               </select>
