--- a/OOS/src/app/shopping/account/wishlist-account/wishlist-account.component.html
+++ b/OOS/src/app/shopping/account/wishlist-account/wishlist-account.component.html
@@ -4,7 +4,7 @@
       <tr>
         <th class="text-center">Image</th>
         <th class="text-center">Product</th>
-        <th class="text-center">Price(.000.VND)</th>
+        <th class="text-center">Price(VNĐ)</th>
         <th ></th>
       </tr>
     </thead>
